<resources xmlns:tools="http://schemas.android.com/tools">
    <!--  App Title and Tab Titles  -->
    <string name="app_name">FitnessApp</string>
    <string name="tab_plans">plans</string>
    <string name="tab_train">train</string>
    <string name="tab_stats">records</string>
    <!--  Prompts - ask user for confirmation  -->
    <string name="end_training_prompt">Do you want to end the training?</string>
    <string name="cancel_editing_prompt">Do you want to cancel editing?</string>
    <string name="nullify_record_prompt">Nullify the record of:&#160;</string>
    <string name="remove_exercise_prompt">Remove exercise:&#160;</string>
    <string name="save_plan_prompt">Save training plan configuration?</string>
    <string name="delete_plan_prompt">Delete plan:&#160;</string>
    <!--  Simple Strings  -->
    <string name="choose_plan"> --- Choose plan ---</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="create">create</string>
    <string name="edit">edit</string>
    <string name="dismiss">dismiss</string>
    <string name="save">save</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <!--  EditText - create/rename Plan editTexts  -->
    <string name="title_edit_text">Title (mandatory)</string>
    <string name="description_edit_text">Description (optional)</string>
    <string name="name_edit_text">Name (mandatory, max 23 characters)</string>
    <string name="shortcut_edit_text">Shortcut (optional, max 11 characters)</string>
    <!--  Messages - headers of Dialogs, messages of Toasts and SnackBars  -->
    <string name="empty_plan_msg">This training plan is empty!</string>
    <string name="create_new_plan_msg">Create a new training plan</string>
    <string name="edit_plan_title_msg">Edit title and description of plan</string>
    <string name="edit_exercise_msg">Edit name and shortcut of exercise</string>
    <string name="duplicate_plan_name_msg">A training plan with this name already exists!</string>
    <string name="duplicate_exercise_name_msg">An exercise with this name already exists!</string>
    <string name="new_record_msg">New personal best!!!</string>
    <string name="too_much_weight_msg">That is too much weight!</string>
    <string name="back_again_to_exit_msg">Press back again to exit app</string>
    <string name="cannot_edit_msg">Cannot edit plan while training</string>
    <string name="cannot_train_msg">Cannot train while editing</string>
    <string name="cannot_add_msg">Cannot add new exercise while editing</string>
    <string name="stay_on_tab_msg">Please don\'t switch tabs before saving or you will lose all editing progress</string>
    <string name="remove_exercise_warning_msg">Warning: It will be removed from all training plans.
        \nYou won\'t be able to add this exercise to a plan</string>
    <!--  String in option menu of StatsFragment  -->
    <string name="option_add_new_exercise">Add a new exercise</string>
    <string name="option_sort_exercises">Sort exercises A->Z</string>
    <string name="option_nullify_all_records">Nullify all records</string>
    <string name="option_remove_all_exercises">Remove all exercises</string>
    <!--  Strings used in Records Tab if Exercise never done  -->
    <string name="default_kg">0</string>
    <string name="default_date">dd.MM.yyyy</string>
    <!--  Strings used on Train Tab  -->
    <string name="input_weight">Input weight</string>
    <string name="sets">sets:</string>
    <string name="reps">reps:</string>
    <string name="hyper_trophy">HT:</string>
    <string name="personal_best">max:</string>
    <!--  Last training + details  -->
    <string name="last_training">Last training</string>
    <string name="date_time">Date - Time</string>
    <string name="duration">Duration</string>
    <!--  Miscellaneous  -->
    <string name="delete_all">DELETE ALL</string>
    <string name="date_short_format">dd.MM.yyyy</string>
    <string name="date_long_format">dd.MM.yyyy - HH:mm</string>
    <string name="night_mode">Night mode</string>
    <string name="kg">kg</string>
</resources>
